--- a/popup.html
+++ b/popup.html
@@ -9,14 +9,14 @@
   <body>
     <div class="App">
       <section class="content">
-        <img class="graphic" src="image.jpg" alt="Graphic" />
+        <img class="graphic" src="resources/image.jpg" alt="Graphic" />
         <div class="container">
             <form id="login-form">
                 <label for="UserHandle" class="UserHandle">Add new friend</label><br/>
                 <input type = "text" id="userHandle" name="userHandle" placeholder="Enter friend's user handle" required><br/>
                 <div class="update-button">
-                  <button type="button" id ="button-save">Save</button>
-                  <button type="button" id ="button-clear">Clear All</button>
+                  <button type="button" id ="btn-save">Save</button>
+                  <button type="button" id ="btn-clear">Clear All</button>
                 </div>
             </form> 
             <p id="errorMessage" class="error-message"></p>
